--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ img {
 }
 /* shared styles */
 section {
-  margin-top: 100px;
+  margin-top: 80px;
 }
 .montez-regular {
   font-family: "Montez", cursive;
@@ -49,6 +49,8 @@ section {
 }
 .common-btn,
 .banner-btn a:last-child {
+  max-width: 220px;
+  text-align: center;
   display: block;
   font-size: 1rem;
   font-weight: 600;
@@ -177,6 +179,30 @@ section {
   line-height: 22px;
   font-size: 0.9rem;
 }
+/* extra run */
+.extra-run {
+  padding: 30px 55px;
+  background-color: #222222;
+  border-radius: 25px;
+  justify-content: space-between;
+  gap: 152px;
+}
+.extra-run-left-content h3 {
+  max-width: 300px;
+}
+.extra-run-left-content p {
+  margin: 15px 0 30px 0;
+  line-height: 24px;
+}
+.extra-run-img {
+  max-width: 452px;
+  height: auto;
+  overflow: hidden;
+}
+.extra-run-img img {
+  border-radius: 22px;
+}
+
 /* mobile responsive */
 @media screen and (max-width: 575.98px) {
   /* shared style */
@@ -226,5 +252,16 @@ section {
   }
   .section-title {
     font-size: 1.8rem;
+  }
+
+  /* extra run */
+  .extra-run {
+    padding: 30px;
+    flex-direction: column;
+    gap: 25px;
+  }
+  .extra-run-left-content .common-btn {
+    padding: 15px 45px;
+    max-width: 100%;
   }
 }
