added team section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,12 +143,14 @@ section {
 }
 
 /* habits section */
-.habits-title {
+.habits-title,
+.team-title {
   max-width: 630px;
   margin: 0 auto;
   text-align: center;
 }
-.habits-title p {
+.habits-title p,
+.team-title p {
   margin: 18px 0 50px 0;
 }
 .habits-type-wrapper {
@@ -203,6 +205,38 @@ section {
   border-radius: 22px;
 }
 
+/* team section */
+.team-wrapper {
+  background: #222222;
+  padding: 30px;
+  gap: 30px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border-radius: 20px;
+}
+.team-single-box {
+  width: 340px;
+  height: 290px;
+  position: relative;
+}
+.team-single-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 22px;
+}
+.team-img-content {
+  position: absolute;
+  bottom: 18px;
+  left: 24px;
+}
+.team-img-content h6 {
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+}
+.team-img-content span {
+  color: var(--para-color);
+}
 /* mobile responsive */
 @media screen and (max-width: 575.98px) {
   /* shared style */
@@ -263,5 +297,9 @@ section {
   .extra-run-left-content .common-btn {
     padding: 15px 45px;
     max-width: 100%;
+  }
+  /* team here */
+  .team-wrapper {
+    justify-content: center;
   }
 }
